--- a/ecommerce/static/css/base.css
+++ b/ecommerce/static/css/base.css
@@ -1,39 +1,69 @@
-.box-element{
-	box-shadow:hsl(0, 0%, 80%) 0 0 16px;
+html, body {
+    zoom: 80%;
+	max-width: 100%;
+    overflow-x: hidden;
+
+}
+
+
+.box-element {
+	box-shadow: hsl(0, 0%, 80%) 0 0 16px;
 	background-color: #fff;
 	border-radius: 4px;
 	padding: 10px;
 }
 
-.product{
+.product {
 	border-radius: 0 0 4px 4px;
 }
 
-.thumbnail{
+.thumbnail {
 	width: 100%;
 	height: 200px;
-	-webkit-box-shadow: -1px -3px 5px -2px rgba(214,214,214,1);
-    -moz-box-shadow: -1px -3px 5px -2px rgba(214,214,214,1);
-    box-shadow: -1px -3px 5px -2px rgba(214,214,214,1);
+	-webkit-box-shadow: -1px -3px 5px -2px rgba(214, 214, 214, 1);
+	-moz-box-shadow: -1px -3px 5px -2px rgba(214, 214, 214, 1);
+	box-shadow: -1px -3px 5px -2px rgba(214, 214, 214, 1);
 }
 
-#cart-icon{
-	width:25px;
+#cart-icon {
+	width: 25px;
 	display: inline-block;
 	margin-left: 15px;
 }
 
-.bodynav:hover{
-    transform: scale(1.5);
-    color: rgb(0, 0, 0);
+.bodynav:hover {
+	transform: scale(1.1);
+	color: rgb(0, 0, 0);
+}
+
+.pdt-box {
+	margin: 30px 0px;
+}
+
+.pdt-box:hover {
+	transform: scale(1.1);
 }
 
 
-
-.pdt-box{
-    margin: 30px 0px;
+.container{
+	max-width: 100%;
+	overflow:auto;
 }
 
-.pdt-box:hover{
-    transform: scale(1.1);
+.sub-nav-container{
+	min-height: 50px;
+	overflow-x: hidden;
+}
+
+
+.maniplulate-button{
+	background: black;
+	color: white;
+	border-radius: 0px 0px 50px 50px;
+}
+
+.maniplulate-button:hover{
+	transform: scale(1.1);
+	overflow: auto;
+	overflow-y: hidden;
 }
