--- a/ecommerce/templates/landing/storesearch.html
+++ b/ecommerce/templates/landing/storesearch.html
@@ -118,7 +118,7 @@ Homepage
             <div class="container sub-nav-container" style="background: #d3d3d3; height:2.6%; border-radius: 15px 15px 15px 15px; text-align: center; " >
                 <div class="row center">
                         <div class="col-lg-3 bodynav" style="margin-top: 0.6%;">
-                            <input class="form-control maniplulate-button" type="submit" value="sort_Asc" name="manipulation_type">
+                            <input class="form-control maniplulate-button" type="submit" value="sort_asc" name="manipulation_type">
                         </div>
                     
                     <div class="col-lg-3 bodynav" style="margin-top: 0.6%;">
