--- a/ecommerce/templates/landing/storesearch.html
+++ b/ecommerce/templates/landing/storesearch.html
@@ -100,7 +100,7 @@ Homepage
 {% block body %}
 
         <br>
-        <h1 style="align-items: center;"> Welcome , {{user.username}}!!</h1> 
+        <h1 id="top-section"  style="align-items: center;"> Welcome , {{user.username}}!!</h1> 
         <br>
         <form enctype="multipart/form-data" method="POST">
             <div class="container sign-form">
@@ -117,31 +117,32 @@ Homepage
             {% csrf_token %}
             <div class="container sub-nav-container" style="background: #d3d3d3; height:2.6%; border-radius: 15px 15px 15px 15px; text-align: center; " >
                 <div class="row center">
-                        <div class="col-lg-3 bodynav" style="margin-top: 0.6%;">
+                        <div class="col-lg-3 bodynav" style="margin-top: 1.5%;">
                             <input class="form-control maniplulate-button" type="submit" value="sort_asc" name="manipulation_type">
                         </div>
                     
-                    <div class="col-lg-3 bodynav" style="margin-top: 0.6%;">
+                    <div class="col-lg-3 bodynav" style="margin-top: 1.5%;">
                         <input class="form-control maniplulate-button" type="submit" value="sort_desc" name="manipulation_type">
                     </div>
 
-                    <div class="col-lg-3 bodynav" style="margin-top: 0.6%;">
+                    <div class="col-lg-3 bodynav" style="margin-top: 1.5%;">
                         <input class="form-control maniplulate-button" type="submit" value="recent" name="manipulation_type">
                     </div>
 
-                    <div class="col-lg-3 bodynav" style="margin-top: 0.6%;">
+                    <div class="col-lg-3 bodynav" style="margin-top: 1.5%;">
                         <input class="form-control maniplulate-button" type="submit" value="most popular" name="manipulation_type">
                     </div>
                 </div>
             </div>
         </form>
-
+        
         <br><br><br>
         <hr>
 
         <div class="row">
             
             {% for pdt in product %}
+            <a href="{% url 'products:home' pdt.productid %}">
                 <div class="col-lg-4 pdt-box">
                     <img class="thumbnail" src={{pdt.picture.url}}>
                     <div class="box-element product">
@@ -156,6 +157,7 @@ Homepage
                 </div>
                 <br> 
                 <br><br><br><br>
+            </a>
             {% endfor %}
         </div>
 
