--- a/ecommerce/static/css/base.css
+++ b/ecommerce/static/css/base.css
@@ -19,7 +19,7 @@ html, body {
 
 .thumbnail {
 	width: 100%;
-	height: 200px;
+	height: 250px;
 	-webkit-box-shadow: -1px -3px 5px -2px rgba(214, 214, 214, 1);
 	-moz-box-shadow: -1px -3px 5px -2px rgba(214, 214, 214, 1);
 	box-shadow: -1px -3px 5px -2px rgba(214, 214, 214, 1);
@@ -51,7 +51,8 @@ html, body {
 }
 
 .sub-nav-container{
-	min-height: 50px;
+	min-height: 80px;
+	align-items: center;
 	overflow-x: hidden;
 }
 
@@ -59,11 +60,33 @@ html, body {
 .maniplulate-button{
 	background: black;
 	color: white;
-	border-radius: 0px 0px 50px 50px;
+	border-radius: 11px;
+	height: max-content;
 }
 
 .maniplulate-button:hover{
 	transform: scale(1.1);
 	overflow: auto;
 	overflow-y: hidden;
+}
+
+.product-display{
+	border-radius: 20px;
+}
+
+.product-display:hover{
+	transform: scale(1.1);
+	overflow: auto;
+}
+
+
+.related-scroller{
+	width: 100%;
+	height: 500px;
+	overflow-x: auto;
+    overflow-y: auto;
+}
+
+.end-logo:hover{
+	transform: scale(1.5);
 }
