--- a/ecommerce/templates/landing/not_signed_in.html
+++ b/ecommerce/templates/landing/not_signed_in.html
@@ -99,20 +99,20 @@ Homepage
             {% csrf_token %}
             <div class="container sub-nav-container" style="background: #d3d3d3; height:2.6%; border-radius: 15px 15px 15px 15px; text-align: center; " >
                 <div class="row center">
-                        <div class="col-lg-3 bodynav" style="margin-top: 0.6%;">
-                            <input class="form-control maniplulate-button" type="button" value="sort_Asc" name="manipulation_type">
+                        <div class="col-lg-3 bodynav" style="margin-top: 1.5%;">
+                            <input class="form-control maniplulate-button" type="button" value="sort_Asc" name="manipulation_type" onclick="myfunction()">
                         </div>
                     
-                    <div class="col-lg-3 bodynav" style="margin-top: 0.6%;">
-                        <input class="form-control maniplulate-button" type="button" value="sort_desc" name="manipulation_type">
+                    <div class="col-lg-3 bodynav" style="margin-top: 1.5%;">
+                        <input class="form-control maniplulate-button" type="button" value="sort_desc" name="manipulation_type" onclick="myfunction()">
                     </div>
 
-                    <div class="col-lg-3 bodynav" style="margin-top: 0.6%;">
-                        <input class="form-control maniplulate-button" type="button" value="recent" name="manipulation_type">
+                    <div class="col-lg-3 bodynav" style="margin-top: 1.5%;">
+                        <input class="form-control maniplulate-button" type="button" value="recent" name="manipulation_type" onclick="myfunction()">
                     </div>
 
-                    <div class="col-lg-3 bodynav" style="margin-top: 0.6%;">
-                        <input class="form-control maniplulate-button" type="button" value="most popular" name="manipulation_type">
+                    <div class="col-lg-3 bodynav" style="margin-top: 1.5%%;">
+                        <input class="form-control maniplulate-button" type="button" value="most popular" name="manipulation_type" onclick="myfunction()">
                     </div>
                 </div>
             </div>
@@ -141,6 +141,11 @@ Homepage
             {% endfor %}
         </div>
 
+        <script>
+            function myfunction(){
+                alert('Please signin to continue !');
+            }
+        </script>
 
 {% endblock %}
 </div>
