--- a/ecommerce/templates/landing/storesearch.html
+++ b/ecommerce/templates/landing/storesearch.html
@@ -118,19 +118,19 @@ Homepage
             <div class="container sub-nav-container" style="background: #d3d3d3; height:2.6%; border-radius: 15px 15px 15px 15px; text-align: center; " >
                 <div class="row center">
                         <div class="col-lg-3 bodynav" style="margin-top: 1.5%;">
-                            <input class="form-control maniplulate-button" type="submit" value="sort_asc" name="manipulation_type">
+                            <input style="background-color: #485e79;" class="form-control maniplulate-button" type="submit" value="sort_asc" name="manipulation_type">
                         </div>
                     
                     <div class="col-lg-3 bodynav" style="margin-top: 1.5%;">
-                        <input class="form-control maniplulate-button" type="submit" value="sort_desc" name="manipulation_type">
+                        <input style="background-color: #485e79;" class="form-control maniplulate-button" type="submit" value="sort_desc" name="manipulation_type">
                     </div>
 
                     <div class="col-lg-3 bodynav" style="margin-top: 1.5%;">
-                        <input class="form-control maniplulate-button" type="submit" value="recent" name="manipulation_type">
+                        <input style="background-color: #485e79;" class="form-control maniplulate-button" type="submit" value="recent" name="manipulation_type">
                     </div>
 
                     <div class="col-lg-3 bodynav" style="margin-top: 1.5%;">
-                        <input class="form-control maniplulate-button" type="submit" value="most popular" name="manipulation_type">
+                        <input style="background-color: #485e79;" class="form-control maniplulate-button" type="submit" value="most popular" name="manipulation_type">
                     </div>
                 </div>
             </div>
